--- a/app/src/main/res/layout/activity_summary_break_activity.xml
+++ b/app/src/main/res/layout/activity_summary_break_activity.xml
@@ -40,7 +40,7 @@
             android:layout_height="50dp"
             android:layout_marginTop="10dp"
             android:layout_weight="1"
-            android:text="เลือกวันที่"
+            android:text="เลือก"
             android:textSize="20sp"
             android:textStyle="bold" />
 
