--- a/app/src/main/res/layout/activity_summary_break_activity.xml
+++ b/app/src/main/res/layout/activity_summary_break_activity.xml
@@ -45,4 +45,15 @@
             android:textStyle="bold" />
 
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <ListView
+            android:id="@+id/list_customer"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
 </LinearLayout>
