--- a/app/src/main/res/layout/list_menu.xml
+++ b/app/src/main/res/layout/list_menu.xml
@@ -6,7 +6,7 @@
     <TextView
         android:id="@+id/menu_txt"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:layout_weight="1"
         android:background="@android:color/white"
         android:paddingBottom="10dp"
@@ -14,5 +14,5 @@
         android:text="TextView"
         android:textAlignment="center"
         android:textColor="@android:color/black"
-        android:textSize="24sp" />
+        android:textSize="30sp" />
 </LinearLayout>
