--- a/app/src/main/res/layout/activity_summary_break_activity.xml
+++ b/app/src/main/res/layout/activity_summary_break_activity.xml
@@ -86,12 +86,12 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <ListView
             android:id="@+id/list_customer"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="640dp" />
     </LinearLayout>
 </LinearLayout>
