--- a/app/src/main/res/layout/activity_break_detail_activity.xml
+++ b/app/src/main/res/layout/activity_break_detail_activity.xml
@@ -86,7 +86,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/cusname"
+            android:id="@+id/cusname_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
