--- a/app/src/main/res/layout/list_break_detail.xml
+++ b/app/src/main/res/layout/list_break_detail.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/detail_txt"
         android:layout_width="450dp"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_weight="1"
         android:background="@android:color/white"
@@ -23,6 +23,7 @@
         android:layout_height="50dp"
         android:layout_weight="1"
         android:paddingBottom="10dp"
+        android:paddingRight="10dp"
         android:paddingTop="10dp"
         android:text="TextView"
         android:textAlignment="textEnd"
