--- a/app/src/main/res/layout/list_menu.xml
+++ b/app/src/main/res/layout/list_menu.xml
@@ -9,6 +9,7 @@
         android:layout_height="70dp"
         android:layout_weight="1"
         android:background="@android:color/white"
+        android:fontFamily="sans-serif"
         android:paddingBottom="10dp"
         android:paddingTop="10dp"
         android:text="TextView"
