--- a/app/src/main/res/layout/list_room.xml
+++ b/app/src/main/res/layout/list_room.xml
@@ -9,9 +9,10 @@
         android:layout_height="50dp"
         android:layout_weight="1"
         android:background="@android:color/white"
+        android:paddingLeft="35dp"
         android:paddingTop="5dp"
         android:text="TextView"
-        android:textAlignment="center"
+        android:textAlignment="textStart"
         android:textColor="@android:color/black"
         android:textSize="24sp" />
 </LinearLayout>
